--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       - "SPARK_MASTER_PORT=7077"
       - "SPARK_MASTER_WEBUI_PORT=8080"
     command: "/start-master.sh"
+    volumes:
+      - ./docker-volume/input/:/data/input
+      - ./docker-volume/output/:/data/output
   spark-worker:
     image: pk_upskill/spark:latest
     depends_on:
@@ -26,6 +29,9 @@ services:
       - "SPARK_MASTER=spark://spark-master:7077"
       - "SPARK_WORKER_WEBUI_PORT=8080"
     command: "/start-worker.sh"
+    volumes:
+      - ./docker-volume/input/:/data/input
+      - ./docker-volume/output/:/data/output
 networks:
   spark-network:
     driver: bridge
